--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,23 @@
-version: '3.8' 
+version: "3.8"
 services:
-  mongodb:
+  mongodb1:
     image: mongo
+
     volumes:
-      - mongo-data:/data/db 
+      - mongo-data1:/data/db
     env_file:
       - ./env/mongo.env
-  deno:
+  deno1:
     build: ./
     ports:
-      - 3000:3000
+      - 3001:3000
     volumes:
       - ./:/app
       - /app/node_modules
     env_file:
       - ./env/deno.env
     depends_on:
-      - mongodb
-
+      - mongodb1
 
 volumes:
-  mongo-data:
-
+  mongo-data1:
